Text overflow fix

--- a/src/componetns/sidebar/Sidebar.scss
+++ b/src/componetns/sidebar/Sidebar.scss
@@ -16,21 +16,4 @@
     width: 50px;
   }
 
-  .toggle-btn {
-    background: none;
-    border: none;
-    color: white;
-    font-size: 1.2rem;
-    cursor: pointer;
-    margin-bottom: 1rem;
-  }
-
-  ul {
-    list-style: none;
-    padding: 0;
-
-    li {
-      margin-bottom: 1rem;
-    }
-  }
 }
