--- a/src/componetns/timetable/Timetable.scss
+++ b/src/componetns/timetable/Timetable.scss
@@ -5,4 +5,5 @@
     box-shadow: 2px;
     border-width: 2px;
     width: 100%;
+    font-size: medium;
 }
