--- a/src/layouts/MainLayout.scss
+++ b/src/layouts/MainLayout.scss
@@ -7,5 +7,4 @@
 .content {
   flex-grow: 1;
   padding: 1rem;
-  background: #ecf0f1;
 }
